data/derived/sp14/progs/unify/prog0920.ml.out
Characters 240-251:
  | Cosine t -> cos(pi *. eval(t,x,y))
                          ^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
